fix overlapping on responsive nav

--- a/src/Scss/banner.scss
+++ b/src/Scss/banner.scss
@@ -4,16 +4,16 @@
     grid-template-rows: 1fr;
     position: relative;
     width: 100vw;
-    height: 275px;
+    height: 295px;
     background: linear-gradient(0.20turn, rgb(124, 144, 160), #f8f8f8, rgb(124, 144, 160));
     box-shadow: 2px 2px 8px rgba(99, 99, 99, 0.788);
 
     .profile-pic{
         // padding: 5px 0;
         position: relative;
-        border-radius: 150%;
+        border-radius: 100%;
         height: 90%;
-        width: auto;
+        // width: auto;
         width: 210px;
         margin: auto;
         object-fit: cover;
