--- a/src/Scss/frameworks.scss
+++ b/src/Scss/frameworks.scss
@@ -6,7 +6,7 @@
         justify-content: space-around;
         display: grid;
         grid-gap: 20px;
-        grid-template-columns: repeat(auto-fill, 275px);
+        grid-template-columns: repeat(auto-fill, 150px);
         padding: 10px 0;
         img{
             max-width: 100%;
