--- a/src/Scss/nav.scss
+++ b/src/Scss/nav.scss
@@ -9,12 +9,14 @@
     overflow: hidden;
     box-shadow: 2px 2px 8px rgba(99, 99, 99, 0.788);
     .mobile-burger{
-        
-        position: absolute;
+        display: grid;
+        grid-template-columns: 5% 95%;
+        position: relative;
+        // position: absolute;
         padding: 1%;
         height: 100%;
         top: -10%;
-        width: 5%;
+        // width: 5%;
         margin-left: 1%;
         background-color: rgb(255, 255, 255);
         cursor: pointer;
